--- a/src/app/modules/tupa-05/components/tupa-05-tab-container/tupa-05-tab-container.component.html
+++ b/src/app/modules/tupa-05/components/tupa-05-tab-container/tupa-05-tab-container.component.html
@@ -1,5 +1,5 @@
 <app-tupa-05-tab-header [tabs]="this.tabs" (eventSelected)="this.onSelect($event)"/>
-<div class="text-white mt-10">
+<div  class="p-6 bg-gray-50 text-medium text-gray-500 dark:text-gray-400 dark:bg-gray-800 rounded-lg w-full">
   <app-tupa-05-parte-i *ngIf="this.currentTabKey === tabs[0].id"/>
   <app-tupa-05-parte-ii *ngIf="this.currentTabKey === tabs[1].id"/>
   <app-tupa-05-parte-iii *ngIf="this.currentTabKey === tabs[2].id"/>
