--- a/src/app/modules/dashboard/pages/tupa-05-page/tupa-05-page.component.html
+++ b/src/app/modules/dashboard/pages/tupa-05-page/tupa-05-page.component.html
@@ -1,4 +1,4 @@
 <div class="mx-auto px-4 py-4 sm:px-8 lg:container">
-  <app-dashboard-header title="Hola"/>
+  <app-dashboard-header title="REGISTRO DE SOLICITUD"/>
   <app-tupa-05-tab-container />
 </div>
