--- a/src/app/modules/dashboard/components/dashboard-header/dashboard-header.component.html
+++ b/src/app/modules/dashboard/components/dashboard-header/dashboard-header.component.html
@@ -2,8 +2,8 @@
   <div class="inline-block">
     <h3 class="font-semibold text-foreground">{{ this.title }}</h3>
     <div class="space-x-1 text-xs font-medium text-muted-foreground">
-      <a href="" class="hover:text-primary">Dashboards</a>
-      <span> - Podcast</span>
+      <a href="" class="hover:text-primary"></a>
+      <span></span>
     </div>
   </div>
   <div class="inline-block space-x-4">
