--- a/src/app/modules/requisitos/components/requisitos-tab-container/requisitos-tab-container.component.html
+++ b/src/app/modules/requisitos/components/requisitos-tab-container/requisitos-tab-container.component.html
@@ -1,2 +1,4 @@
 <app-requisitos-tab-header [tabs]="this.tabs" (eventSelected)="this.onSelect($event)"/>
-<p>requisitos-tab-container works!</p>
+    <div  class="p-6 bg-gray-50 text-medium text-gray-500 dark:text-gray-400 dark:bg-gray-800 rounded-lg w-full">
+    <app-requisitos-adjuntos *ngIf="this.currentTabKey === tabs[0].id"/>
+  </div>
