--- a/src/app/modules/shared/requisitos/components/requisitos-adjuntos/requisitos-adjuntos.component.html
+++ b/src/app/modules/shared/requisitos/components/requisitos-adjuntos/requisitos-adjuntos.component.html
@@ -10,7 +10,8 @@
                 <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">Solicitante <b
                         class="text-red-600"></b></label>
                 <input type="text" id="first_name"
-                    class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary cursor-not-allowed focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" value="" disabled readonly>
+                    class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary cursor-not-allowed focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary"
+                    value="" disabled readonly>
             </div>
 
             <div>
@@ -21,13 +22,72 @@
             </div>
 
         </div>
-        <div class="mb-6 grid gap-6 md:grid-cols-2">
+        <!-- <div class="mb-6 grid gap-6 md:grid-cols-2">
             <form class="max-w-lg mx-auto">
                 <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white" for="user_avatar">Archivo Adjunto</label>
                 <input class="block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400" aria-describedby="user_avatar_help" id="user_avatar" type="file">
                 <div class="mt-1 text-sm text-gray-500 dark:text-gray-300" id="user_avatar_help"></div>
             </form>
+        </div> -->
+        <div class="mb-7 grid gap-6 md:grid-cols-1 mb-4">
+            <div>
+                <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">Archivo Adjunto <b
+                        class="text-red-600">*</b></label>
+                <div class="flex items-center justify-center w-full">
+
+                    <label for="dropzone-file"
+                        class="h-32 flex flex-col items-center justify-center w-full h-64 border-2 border-gray-300 border-dashed rounded-lg cursor-pointer bg-gray-50 dark:hover:bg-bray-800 dark:bg-gray-700 hover:bg-gray-100 dark:border-gray-600 dark:hover:border-gray-500 dark:hover:bg-gray-600">
+                        <div class="flex flex-col items-center justify-center pt-5 pb-6">
+                            <svg class="w-8 h-8 mb-4 text-gray-500 dark:text-gray-400" aria-hidden="true"
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 16">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2"
+                                    d="M13 13h3a3 3 0 0 0 0-6h-.025A5.56 5.56 0 0 0 16 6.5 5.5 5.5 0 0 0 5.207 5.021C5.137 5.017 5.071 5 5 5a4 4 0 0 0 0 8h2.167M10 15V6m0 0L8 8m2-2 2 2" />
+                            </svg>
+                            <p class="mb-2 text-sm text-gray-500 dark:text-gray-400"><span class="font-semibold">Click
+                                    to upload</span> or drag and drop</p>
+                            <p class="text-xs text-gray-500 dark:text-gray-400">SVG, PNG, JPG or GIF (MAX. 800x400px)
+                            </p>
+                        </div>
+                        <input id="dropzone-file" type="file" class="hidden" />
+                    </label>
+                </div>
+            </div>
         </div>
-        <app-requisitos-table/>
+        <div class="mb-6">
+            <app-requisitos-table />
+        </div>
+        <div class="mb-6 grid gap-6 md:grid-cols-2">
+            <div>
+                <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">Confidencial? <b
+                        class="text-red-600">*</b></label>
+                <select
+                    class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary">
+                    <option value="SI">SI</option>
+                    <option value="NO">NO</option>
+                </select>
+            </div>
+            <div>
+                <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white"
+                  >Numero de Folios <b class="text-red-600">*</b></label
+                >
+                <input
+                  type="text"
+                  class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
+              </div>
+        </div>
+        <div class="inline-block space-x-4">
+            <button
+              class="flex-none rounded-md bg-muted px-4 py-2.5 text-xs font-semibold text-muted-foreground hover:text-foreground">
+              Finalizar Proceso
+            </button>
+            <button class="flex-none rounded-md bg-primary px-4 py-2.5 text-xs font-semibold text-primary-foreground">
+              Cerrar
+            </button>
+            <button class="flex-none rounded-md bg-primary px-4 py-2.5 text-xs font-semibold text-primary-foreground">
+                Archivar
+              </button>
+          </div>
+
     </div>
 </form>
