--- a/src/app/modules/tupas-dev03/tupa-05/components/tupa-05-parte-i/tupa-05-parte-i.component.html
+++ b/src/app/modules/tupas-dev03/tupa-05/components/tupa-05-parte-i/tupa-05-parte-i.component.html
@@ -25,9 +25,15 @@
           class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
       </div>
       <div>
-        <button
-          class="relative w-full rounded-lg border border-primary bg-transparent px-5 py-2.5 text-center text-sm font-medium text-primary text-white ring-primary/50 focus:outline-none focus:ring-4 hover:bg-primary hover:text-white sm:w-auto md:top-7">
+        <!-- <button
+          class="relative w-full rounded-lg border border-primary
+           bg-transparent px-5 py-2.5 text-center text-sm font-medium
+            text-primary text-white ring-primary/50 focus:outline-none
+             focus:ring-4 hover:bg-primary hover:text-white sm:w-auto md:top-7">
           Buscar
+        </button> -->
+        <button data-modal-target="crud-modal" data-modal-toggle="crud-modal" class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
+          Toggle modal
         </button>
         <button
           class="relative mt-2 w-full rounded-lg bg-primary px-5 py-2.5 text-center text-sm font-medium text-white ring-primary/50 focus:outline-none focus:ring-4 sm:w-auto md:top-7 md:mt-0 md:ml-2">
@@ -111,4 +117,5 @@
       id="first_name"
       class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
   </div>
+  <app-solicitante-modal/>
 </form>
