--- a/src/app/modules/shared/solicitante-search/components/solicitante-table/solicitante-table.component.html
+++ b/src/app/modules/shared/solicitante-search/components/solicitante-table/solicitante-table.component.html
@@ -1,1 +1,44 @@
-<p>solicitante-table works!</p>
+<!-- <p>requisitos-table works!</p> -->
+<div class="relative overflow-x-auto shadow sm:rounded-lg">
+    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+        <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+            <tr>
+                <th scope="col" class="px-6 py-3">
+                   Tipo documento
+                </th>
+                <th scope="col" class="px-6 py-3">
+                   Numero
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Razon social o Nombres
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
+                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                    DNI
+                </th>
+                <td class="px-6 py-4">
+                    76273463
+                </td>
+               
+                <td class="px-6 py-4">
+                    jean flores camacho
+                </td>
+            </tr>
+            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
+                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                    RUC
+                </th>
+                <td class="px-6 py-4">
+                    10762734631
+                </td>
+                <td class="px-6 py-4">
+                    Maria de las flores edena
+                </td>
+            </tr>
+
+        </tbody>
+    </table>
+</div>
