add solicitante modal

--- a/src/app/modules/tupas-dev03/tupa-05/components/tupa-05-parte-i/tupa-05-parte-i.component.html
+++ b/src/app/modules/tupas-dev03/tupa-05/components/tupa-05-parte-i/tupa-05-parte-i.component.html
@@ -19,13 +19,13 @@
           class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
       </div>
       <div class="justify-end">
-        <button data-modal-target="myModal" data-modal-toggle="myModal"
+        <button data-modal-target="myModal2" data-modal-toggle="myModal2"
           class="relative mt-2 w-full rounded-lg bg-primary px-5 py-2.5 text-center text-sm font-medium text-white ring-primary/50 focus:outline-none focus:ring-4 sm:w-auto md:top-7 md:mt-0 md:ml-2"
           type="button">
           Buscar
         </button>
         <!-- <button (click)="openDialog()">Open Modal</button> -->
-        <button
+        <button data-modal-target="myModal2" data-modal-toggle="myModal2"
           class="relative mt-2 w-full rounded-lg bg-primary px-5 py-2.5 text-center text-sm font-medium text-white ring-primary/50 focus:outline-none focus:ring-4 sm:w-auto md:top-7 md:mt-0 md:ml-2">
           Agregar
         </button>
@@ -95,4 +95,5 @@
       class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
   </div>
   <app-solicitante-modal />
+  <app-solicitante-add-modal />
 </form>
