--- a/src/app/modules/shared/solicitante-add/components/solicitante-add-modal/solicitante-add.component.html
+++ b/src/app/modules/shared/solicitante-add/components/solicitante-add-modal/solicitante-add.component.html
@@ -22,7 +22,7 @@
             <!-- Modal body -->
             <form class="p-4 md:p-5">
                 <div class="grid gap-4 mb-4 grid-cols-2">
-                    <div class="">
+                    <div class="col-span-2 sm:col-span-1">
                         <ul
                             class="items-center w-full text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg sm:flex dark:bg-gray-700 dark:border-gray-600 dark:text-white">
                             <li class="w-full border-b border-gray-200 sm:border-b-0 sm:border-r dark:border-gray-600">
@@ -44,13 +44,17 @@
                             </li>
                         </ul>
                     </div>
-
-                    <div class="flex justify-end">
+                    <div class="col-span-2 sm:col-span-1 flex justify-end">
                         <button
                             class=" w-full rounded-lg bg-primary px-5 py-2.5 text-center text-sm font-medium text-white ring-primary/50 focus:outline-none focus:ring-4 sm:w-auto md:mt-0 md:ml-2">
                             Validar
                         </button>
                     </div>
+                    <div class="col-span-2 sm:col-span-2">
+                        <label for="documentonum" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Numero documento</label>
+                        <input type="text" name="documentonum" id="documentonum" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="" required="">
+                    </div>
+                    
                 </div>
                 <div class="grid gap-4 mb-3 grid-cols-2">
                     <div class="col-span-2 sm:col-span-1">
