--- a/src/app/modules/tupas-dev03/tupa-05/components/tupa-05-parte-i/tupa-05-parte-i.component.html
+++ b/src/app/modules/tupas-dev03/tupa-05/components/tupa-05-parte-i/tupa-05-parte-i.component.html
@@ -7,41 +7,52 @@
   <div class="pt-5">
     <div class="mb-6 grid gap-6 md:grid-cols-3">
       <div>
-        <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">Tipo Documento <b
-            class="text-red-600">*</b></label>
-        <input type="text" id="first_name"
-          class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
+        <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
+          Tipo Documento <b class="text-red-600">*</b></label
+        >
+        <app-document-type-select />
       </div>
       <div>
-        <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">N° Documento <b
-            class="text-red-600">*</b></label>
-        <input type="text" id="first_name"
+        <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white"
+          >N° Documento <b class="text-red-600">*</b></label
+        >
+        <input
+          type="text"
+          id="first_name"
           class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
       </div>
       <div class="justify-end">
-        <button data-modal-target="myModal2" data-modal-toggle="myModal2"
-          class="relative mt-2 w-full rounded-lg bg-primary px-5 py-2.5 text-center text-sm font-medium text-white ring-primary/50 focus:outline-none focus:ring-4 sm:w-auto md:top-7 md:mt-0 md:ml-2"
+        <button
+          data-modal-target="myModal2"
+          data-modal-toggle="myModal2"
+          class="relative mt-2 w-full rounded-lg bg-primary px-5 py-2.5 text-center text-sm font-medium text-white ring-primary/50 focus:outline-none focus:ring-4 sm:w-auto md:top-7 md:ml-2 md:mt-0"
           type="button">
           Buscar
         </button>
         <!-- <button (click)="openDialog()">Open Modal</button> -->
-        <button data-modal-target="myModal2" data-modal-toggle="myModal2"
-          class="relative mt-2 w-full rounded-lg bg-primary px-5 py-2.5 text-center text-sm font-medium text-white ring-primary/50 focus:outline-none focus:ring-4 sm:w-auto md:top-7 md:mt-0 md:ml-2">
+        <button
+          data-modal-target="myModal2"
+          data-modal-toggle="myModal2"
+          class="relative mt-2 w-full rounded-lg bg-primary px-5 py-2.5 text-center text-sm font-medium text-white ring-primary/50 focus:outline-none focus:ring-4 sm:w-auto md:top-7 md:ml-2 md:mt-0">
           Agregar
         </button>
       </div>
     </div>
     <!-- level 2 -->
     <div class="mb-6">
-      <label class="col-span-2 mb-2 block text-sm font-medium text-gray-900 dark:text-white">Razón social/Nombre <b
-          class="text-red-600">*</b></label>
-      <input type="text" id="first_name"
+      <label class="col-span-2 mb-2 block text-sm font-medium text-gray-900 dark:text-white"
+        >Razón social/Nombre <b class="text-red-600">*</b></label
+      >
+      <input
+        type="text"
+        id="first_name"
         class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
     </div>
     <!-- level 3 -->
     <div class="mb-6">
-      <label class="col-span-2 mb-2 block text-sm font-medium text-gray-900 dark:text-white">Dirección <b
-          class="text-red-600">*</b></label>
+      <label class="col-span-2 mb-2 block text-sm font-medium text-gray-900 dark:text-white"
+        >Dirección <b class="text-red-600">*</b></label
+      >
       <textarea
         class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary">
       </textarea>
@@ -50,17 +61,20 @@
     <div class="mb-6 grid gap-6 md:grid-cols-3">
       <div>
         <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">Nombre Departamento</label>
-        <input type="text"
+        <input
+          type="text"
           class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
       </div>
       <div>
         <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">Nombre Provincia</label>
-        <input type="text"
+        <input
+          type="text"
           class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
       </div>
       <div>
         <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">Nombre Distrito</label>
-        <input type="text"
+        <input
+          type="text"
           class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
       </div>
     </div>
@@ -68,17 +82,20 @@
     <div class="mb-6 grid gap-6 md:grid-cols-3">
       <div>
         <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">Teléfono</label>
-        <input type="text"
+        <input
+          type="text"
           class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
       </div>
       <div>
         <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">Teléfono Movil</label>
-        <input type="text"
+        <input
+          type="text"
           class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
       </div>
       <div>
         <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">Correo Electrónico</label>
-        <input type="text"
+        <input
+          type="text"
           class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
       </div>
     </div>
@@ -89,9 +106,12 @@
   </h6>
   <!-- level 7 -->
   <div class="mb-6">
-    <label class="col-span-2 mb-2 block text-sm font-medium text-gray-900 dark:text-white">Representante Legal<b
-        class="text-red-600">*</b></label>
-    <input type="text" id="first_name"
+    <label class="col-span-2 mb-2 block text-sm font-medium text-gray-900 dark:text-white"
+      >Representante Legal<b class="text-red-600">*</b></label
+    >
+    <input
+      type="text"
+      id="first_name"
       class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
   </div>
   <app-solicitante-modal />
