--- a/src/app/modules/shared/document-type/components/document-type-select.component.html
+++ b/src/app/modules/shared/document-type/components/document-type-select.component.html
@@ -1,4 +1,8 @@
 <select
+  [(ngModel)]="value"
+  (change)="onChange($event)"
   class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary">
-  <option *ngFor="let item of this.documentTypeList.getData()">{{ item.id }}.- {{ item.name }}</option>
+  <option *ngFor="let item of this.documentTypeList.getData()" [value]="item.id">
+    {{ item.id }}.- {{ item.name }}
+  </option>
 </select>
