fix info solicitante

--- a/src/app/modules/tupas-dev03/tupa-05/components/tupa-05-parte-i/tupa-05-parte-i.component.html
+++ b/src/app/modules/tupas-dev03/tupa-05/components/tupa-05-parte-i/tupa-05-parte-i.component.html
@@ -18,11 +18,11 @@
         >
         <input
           type="text"
-          [readonly]="!!personSearchService.getData()"
+          [readonly]="!!person"
           formControlName="documentNumber"
           class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
       </div>
-      <div class="justify-end" *ngIf="!personSearchService.getData(); else contentSearchPerson">
+      <div class="justify-end" *ngIf="!person; else contentSearchPerson">
         <button
           *ngIf="!personSearchService.getLoading(); else searchLoading"
           [disabled]="!searchForm.valid"
@@ -54,29 +54,29 @@
       </ng-template>
     </form>
     <!-- level 2 -->
-    <div class="mb-6" *ngIf="!!personSearchService.getData()">
+    <div class="mb-6" *ngIf="!!person">
       <label class="col-span-2 mb-2 block text-sm font-medium text-gray-900 dark:text-white"
         >Razón social/Nombre <b class="text-red-600">*</b></label
       >
       <input
         type="text"
         readonly
-        [value]="personSearchService.getData()?.nombreRazonSocial"
+        [value]="person.nombreRazonSocial"
         class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
     </div>
     <!-- level 3 -->
-    <div class="mb-6" *ngIf="!!personSearchService.getData()">
+    <div class="mb-6" *ngIf="!!person">
       <label class="col-span-2 mb-2 block text-sm font-medium text-gray-900 dark:text-white"
         >Dirección <b class="text-red-600">*</b></label
       >
       <textarea
         readonly
-        [value]="personSearchService.getData()?.address"
+        [value]="person.address"
         class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary">
       </textarea>
     </div>
     <!-- level 4 -->
-    <div class="mb-6 grid gap-6 md:grid-cols-3" *ngIf="!!personSearchService.getData()">
+    <div class="mb-6 grid gap-6 md:grid-cols-3" *ngIf="!!person">
       <div>
         <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">Nombre Departamento</label>
         <input
@@ -100,13 +100,13 @@
       </div>
     </div>
     <!-- level 5 -->
-    <div class="mb-6 grid gap-6 md:grid-cols-3" *ngIf="!!personSearchService.getData()">
+    <div class="mb-6 grid gap-6 md:grid-cols-3" *ngIf="!!person">
       <div>
         <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">Teléfono</label>
         <input
           type="text"
           readonly
-          [value]="personSearchService.getData()?.phone"
+          [value]="person.phone"
           class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
       </div>
       <div>
@@ -114,7 +114,7 @@
         <input
           type="text"
           readonly
-          [value]="personSearchService.getData()?.cellphone"
+          [value]="person.cellphone"
           class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
       </div>
       <div>
@@ -122,7 +122,7 @@
         <input
           type="text"
           readonly
-          [value]="personSearchService.getData()?.email"
+          [value]="person.email"
           class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
       </div>
     </div>
@@ -130,11 +130,11 @@
   <!-- level 6 -->
   <h6
     class="mb-6 border-b border-dashed border-b-gray-600 pb-2 text-lg font-bold text-gray-900 dark:text-white"
-    *ngIf="!!personSearchService.getData()">
+    *ngIf="!!person">
     Datos del solicitante
   </h6>
   <!-- level 7 -->
-  <div class="mb-6" *ngIf="!!personSearchService.getData()">
+  <div class="mb-6" *ngIf="!!person">
     <label class="col-span-2 mb-2 block text-sm font-medium text-gray-900 dark:text-white"
       >Representante Legal<b class="text-red-600">*</b></label
     >
