--- a/src/app/modules/tupas-dev03/tupa-05/components/tupa-05-tab-container/tupa-05-tab-container.component.html
+++ b/src/app/modules/tupas-dev03/tupa-05/components/tupa-05-tab-container/tupa-05-tab-container.component.html
@@ -1,8 +1,11 @@
-<app-tupa-05-tab-header [tabs]="this.tabs" (eventSelected)="this.onSelect($event)"/>
-<div  class="p-6 bg-gray-50 text-medium text-gray-500 dark:text-gray-400 dark:bg-gray-800 rounded-lg w-full">
-  <app-tupa-05-parte-i *ngIf="this.currentTabKey === tabs[0].id"/>
-  <app-tupa-05-parte-ii *ngIf="this.currentTabKey === tabs[1].id"/>
-  <app-tupa-05-parte-iii *ngIf="this.currentTabKey === tabs[2].id"/>
-  <app-tupa-05-parte-iv *ngIf="this.currentTabKey === tabs[3].id"/>
-  <app-tupa-05-parte-v *ngIf="this.currentTabKey === tabs[4].id"/>
+<app-tupa-05-tab-header [tabs]="this.tabs" (eventSelected)="this.onSelect($event)" />
+<div class="w-full rounded-lg bg-background p-6">
+  <app-tupa-05-parte-i
+    *ngIf="this.currentTabKey === tabs[0].id"
+    [person]="person"
+    (eventPerson)="selectPerson($event)" />
+  <app-tupa-05-parte-ii *ngIf="this.currentTabKey === tabs[1].id" />
+  <app-tupa-05-parte-iii *ngIf="this.currentTabKey === tabs[2].id" />
+  <app-tupa-05-parte-iv *ngIf="this.currentTabKey === tabs[3].id" />
+  <app-tupa-05-parte-v *ngIf="this.currentTabKey === tabs[4].id" />
 </div>
