--- a/src/app/modules/shared/person/components/person-create/person-create.component.html
+++ b/src/app/modules/shared/person/components/person-create/person-create.component.html
@@ -156,10 +156,9 @@
         <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
           Departamento <b class="text-red-600">*</b>
         </label>
-        <input
-          formControlName="departamentoId"
-          type="text"
-          class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
+        <app-departamento-select
+          [value]="createForm.value.departamentoId"
+          (eventChange)="selectDepartamentoId($event)" />
       </div>
     </div>
 
@@ -168,19 +167,20 @@
         <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
           Provincia <b class="text-red-600">*</b>
         </label>
-        <input
-          formControlName="provinciaId"
-          type="text"
-          class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
+        <app-provincia-select
+          [value]="createForm.value.provinciaId"
+          [departamentoId]="createForm.value.departamentoId"
+          (eventChange)="selectProvinciaId($event)" />
       </div>
       <div class="col-span-2 sm:col-span-1">
         <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
           Distrito <b class="text-red-600">*</b>
         </label>
-        <input
-          formControlName="distritoId"
-          type="text"
-          class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
+        <app-distrito-select
+          [value]="createForm.value.distritoId"
+          [departamentoId]="createForm.value.departamentoId"
+          [provinciaId]="createForm.value.provinciaId"
+          (eventChange)="selectDistritoId($event)" />
       </div>
     </div>
 
