--- a/src/app/modules/shared/person/components/person-create/person-create.component.html
+++ b/src/app/modules/shared/person/components/person-create/person-create.component.html
@@ -105,7 +105,6 @@
         <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
           Nombres <b class="text-red-600">*</b>
         </label>
-        {{ createForm.value.nombreRazonSocial }}
         <input
           formControlName="names"
           type="text"
@@ -187,10 +186,12 @@
     <div class="mb-3 grid grid-cols-1 gap-4">
       <div class="col-span-2 sm:col-span-1">
         <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">Centro Poblado</label>
-        <input
-          formControlName="centroPobladoId"
-          type="text"
-          class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
+        <app-poblado-select
+          [value]="createForm.value.centroPobladoId"
+          [departamentoId]="createForm.value.departamentoId"
+          [provinciaId]="createForm.value.provinciaId"
+          [distritoId]="createForm.value.distritoId"
+          (eventChange)="selectPobladoId($event)" />
       </div>
     </div>
 
