--- a/src/app/modules/shared/person/components/person-search/person-search.component.html
+++ b/src/app/modules/shared/person/components/person-search/person-search.component.html
@@ -39,8 +39,8 @@
         </label>
         <input
           type="text"
-          formControlName="ruc"
-          class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
+          formControlName="fullname"
+          class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm uppercase text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
       </div>
     </div>
 
@@ -53,4 +53,8 @@
       </button>
     </div>
   </form>
+  <!-- table -->
+  <div class="border-t border-dashed border-t-gray-600 pt-4" *ngIf="people.length > 0">
+    <app-person-table [data]="people" (eventSelect)="eventSelect.emit($event)" />
+  </div>
 </app-modal>
